# OpenGL

./: .gitignore  CMakeLists.txt  OpenGL.sln  README.md  main.cpp
RendererUI/: App.axaml  App.axaml.cs  Program.cs  RendererUI.csproj  ViewLocator.cs  app.manifest
RendererUI/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
RendererUI/Views/: MainWindow.axaml  MainWindow.axaml.cs
assimp/lib/cmake/assimp-5.4/: assimpTargets.cmake
builds/: readme.txt
dependencies/: readme.txt
dependencies/glad/include/glad/: glad.h
dependencies/include/glfw/3.4/: INSTALL_RECEIPT.json  sbom.spdx.json
dependencies/pybind11/: INSTALL_RECEIPT.json  sbom.spdx.json
dependencies/pybind11/.brew/: pybind11.rb
dependencies/pybind11/share/cmake/pybind11/: FindPythonLibsNew.cmake
dependencies/pybind11/share/pkgconfig/: pybind11.pc
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
main.exe.dSYM/Contents/Resources/Relocations/aarch64/: main.exe.yml
resources/: readme.txt
src/: CMakeCache.txt  Makefile  app  cmake_install.cmake  main.cpp
src/ClassFolder/Shader/: LitShader.fs  LitShader.vs  UnlitShader.fs  UnlitShader.vs
src/ClassFolder/Util/: FileSupport.h  InputSystem.h
src/ClassFolder/private/: Light.cpp  Shader.cpp  Shader.fs  Shader.vs  Texture.cpp
src/ClassFolder/public/: Camera.h  FileSupport.h  ModelData.h  Shader.h
src/GUI/: ButtonClass.py  main.py
src/Source/: glad.c  main.cpp
src/core/: CMakeLists.txt  main.cpp  renderer.cpp
src/core/private/: Camera.cpp  FileSupport.cpp  Light.cpp  Texture.cpp
src/core/public/: FileSupport.h  Light.h  ModelData.h  Shader.h  Texture.h  VertexData.h
src/header/: ModelData.h  Shader.h
src/python/ui/: OpenGLViewport.py  main.py
src/src/core/: Makefile  cmake_install.cmake
